crates/atlas-runtime/tests/snapshots/frontend_syntax__lexer_error_unterminated_comment.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1004
  message: Unterminated multi-line comment
  file: "<unknown>"
  line: 3
  column: 61
  length: 43
  snippet: /* This comment never closes
  label: comment starts here
  help: "add '*/' to close the multi-line comment"
