crates/atlas-runtime/tests/snapshots/frontend_syntax__logical_and.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: And
            left:
              Literal:
                - Bool: true
                - start: 0
                  end: 4
            right:
              Literal:
                - Bool: false
                - start: 8
                  end: 13
            span:
              start: 0
              end: 13
        span:
          start: 0
          end: 14
