crates/atlas-runtime/tests/snapshots/frontend_syntax__logical_not.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Unary:
            op: Not
            expr:
              Literal:
                - Bool: true
                - start: 1
                  end: 5
            span:
              start: 0
              end: 5
        span:
          start: 0
          end: 6
