crates/atlas-runtime/tests/snapshots/frontend_syntax__method_with_one_arg.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: obj
                span:
                  start: 0
                  end: 3
            member:
              name: method
              span:
                start: 4
                end: 10
            args:
              - Identifier:
                  name: x
                  span:
                    start: 11
                    end: 12
            span:
              start: 0
              end: 13
        span:
          start: 0
          end: 14
